--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Pokemons#index</h1>
 <p>Find me in app/views/pokemons/index.html.erb</p>
 
-<% @body[:pokemon].each do
+<% @pokemons.each do |pokemon| %>
+	<%= pokemon['name'] %> 
+<% end %>
+
